--- a/background/index.html
+++ b/background/index.html
@@ -61,7 +61,7 @@
       <h3 class="section-header">Hintergrund</h3>
       <!-- start blog accordeon -->
       <ul class="collapsible popout">
-        <!-- first blog entry -->
+        <!-- press article blog entry -->
         <li>
           <div class="collapsible-header">
             <div class="blog-image-wrapper">
@@ -80,7 +80,7 @@
             </div>
           </div>
         </li>
-        <!-- second blog entry -->
+        <!-- how to serve blog entry -->
         <li>
           <div class="collapsible-header">
             <div class="blog-image-wrapper">
@@ -218,11 +218,16 @@
         </div>
       </div>
     </div>
-    <div class="copyright">
-      <a class="copyright-wrapper" href="https://theresamannschatz.design">
-        <img class="brand-figure" id="chamaeleon-footer-brand" src="../images/chamaeleon.png" alt="chamaleon-symbol-footer">
-        <p>copyright @theresamannschatz.design 2023</p>
-      </a>
+    <div class="footer-copyright">
+      <div class="container">
+        <div class="footer-wrapper">
+          <a class="copyright-wrapper" href="https://theresamannschatz.design">
+            <img class="brand-figure" id="chamaeleon-footer-brand" src="../images/chamaeleon.png" alt="chamaleon-symbol-footer">
+            <p>copyright @theresamannschatz.design 2023</p>
+          </a>
+          <a class="grey-text text-lighten-4" href="../imprint/index.html">Impressum</a>
+        </div>
+      </div>
     </div>
   </footer>
 
