--- a/recipe/index.html
+++ b/recipe/index.html
@@ -382,11 +382,16 @@
         </div>
       </div>
     </div>
-    <div class="copyright">
-      <a class="copyright-wrapper" href="https://theresamannschatz.design">
-        <img class="brand-figure" id="chamaeleon-footer-brand" src="../images/chamaeleon.png" alt="chamaleon-symbol-footer">
-        <p>copyright @theresamannschatz.design 2023</p>
-      </a>
+    <div class="footer-copyright">
+      <div class="container">
+        <div class="footer-wrapper">
+          <a class="copyright-wrapper" href="https://theresamannschatz.design">
+            <img class="brand-figure" id="chamaeleon-footer-brand" src="../images/chamaeleon.png" alt="chamaleon-symbol-footer">
+            <p>copyright @theresamannschatz.design 2023</p>
+          </a>
+          <a class="grey-text text-lighten-4" href="../imprint/index.html">Impressum</a>
+        </div>
+      </div>
     </div>
   </footer>
 
