Add web stats analytics

--- a/imprint/index.html
+++ b/imprint/index.html
@@ -172,6 +172,15 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="../js/materialize.js"></script>
   <script src="../js/init.js"></script>
-
+  <!-- analytics tracker -->
+  <!-- Begin Web-Stat code v 7.0 -->
+  <span id="wts2130360"></span>
+  <script>var wts=document.createElement('script');wts.async=true;
+  wts.src='https://app.ardalio.com/log7.js';document.head.appendChild(wts);
+  wts.onload = function(){ wtslog7(2130360,5); };
+  </script><noscript><a href="https://www.web-stat.com">
+  <img src="https://app.ardalio.com/7/5/2130360.png"
+  alt="Web-Stat web statistics"></a></noscript>
+  <!-- End Web-Stat code v 7.0 -->
   </body>
 </html>
