--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   </script>
   <script>
     cloudLocalization({
-      defaultLanguage: "en",
+      defaultLanguage: "de",
       urlLanguageLocation: UrlLanguageLocation.none,
       translatorProvider: TranslatorProvider.none,
       translatorProviderKey: "",
