WIP: add some translations

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Bolo de Rolo - Brasilianischer Kuchen</title>
+  <title lng-tag="page-title">Bolo de Rolo - Brasilianischer Kuchen</title>
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
@@ -54,16 +54,20 @@
       </a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html" lng-tag="home">Übersicht</a></li>
-        <li><a href="recipe/index.html">Rezept</a></li>
-        <li><a href="background/index.html">Hintergrund</a></li>
+        <li><a href="recipe/index.html" lng-tag="recipe">Rezept</a></li>
+        <li><a href="background/index.html" lng-tag="background">Hintergrund</a></li>
+        <!-- todo: style and add to other pages -->
         <li><a href="javascript:void(0)" id="enTranslator">EN</a></li>
         <li><a href="javascript:void(0)" id="deTranslator">DE</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="index.html">Übersicht</a></li>
-        <li><a href="recipe/index.html">Rezept</a></li>
-        <li><a href="background/index.html">Hintergrund</a></li>
+        <li><a href="index.html" lng-tag="home">Übersicht</a></li>
+        <li><a href="recipe/index.html" lng-tag="recipe">Rezept</a></li>
+        <li><a href="background/index.html" lng-tag="background">Hintergrund</a></li>
+        <!-- todo: style and add to other pages -->
+        <li><a href="javascript:void(0)" id="enTranslator">EN</a></li>
+        <li><a href="javascript:void(0)" id="deTranslator">DE</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -74,7 +78,7 @@
       <div class="container">
         <div id="hero-text-wrapper">
           <h1 id="hero-title">Bolo de Rolo</h1>
-          <h2 id="hero-subtitle">Lerne den wahrscheinlich leckersten Kuchen Brasiliens kennen!</h2>
+          <h2 id="hero-subtitle" lng-tag="hero-subtitle">Lerne den wahrscheinlich leckersten Kuchen Brasiliens kennen!</h2>
           <a href="recipe/index.html" class="btn-large waves-effect waves-light custom-button">Zum Rezept</a>
         </div>
       </div>
