Finalize translation home page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div id="hero-text-wrapper">
           <h1 id="hero-title">Bolo de Rolo</h1>
           <h2 id="hero-subtitle" lng-tag="hero-subtitle">Lerne den wahrscheinlich leckersten Kuchen Brasiliens kennen!</h2>
-          <a href="recipe/index.html" class="btn-large waves-effect waves-light custom-button">Zum Rezept</a>
+          <a href="recipe/index.html" class="btn-large waves-effect waves-light custom-button" lng-tag="to-recipe-button">Zum Rezept</a>
         </div>
       </div>
     </div>
@@ -90,7 +90,7 @@
   <div class="container">
     <div class="section">
       <!--   Variations Section with image slider   -->
-      <h2 class="center section-header">Variationen</h2>
+      <h2 class="center section-header" lng-tag="variations">Variationen</h2>
       <div class="image-slider-wrapper">
         <div class="image-row">
           <div class="imagegroup" style="border:2px solid white">
@@ -119,8 +119,8 @@
     <div class="no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h2 class="header col s12 light"><span class="quotes">"</span> Brasilianische Kuchentradition trifft kreatives Berlin <span class="quotes end-quote">"</span></h2>
-          <p class="col m6 s12 offset-m3"> Hier könnt ihr lernen wie man mit viel Liebe in echter Handarbeit den berühmten Pernambucanischen Bolo de Rolo - einen Rollkuchen zubereiten könnt.</p>
+          <h2 class="header col s12 light" lng-tag="sub-section-header"><span class="quotes">"</span> Brasilianische Kuchentradition trifft kreatives Berlin <span class="quotes end-quote">"</span></h2>
+          <p class="col m6 s12 offset-m3" lng-tag="sub-section-sub-header"> Hier könnt ihr lernen wie man mit viel Liebe in echter Handarbeit den berühmten Pernambucanischen Bolo de Rolo - einen Rollkuchen zubereiten könnt.</p>
         </div>
       </div>
     </div>
@@ -131,9 +131,9 @@
     <div class="row">
       <div class="col s12 m6">
         <div class="container">
-          <h2 class="mdi-content-send section-header">Wie alles began! Lerne wie es geht! <span class="text-highlight">Mit Rezept!</span></h1>
-          <p class="left-align light">Hier erfährst du mehr darüber wie ich auf die Idee gekommen bin diesen leckeren exotischen Kuchen für Berlin zu backen und wie ich ihn herstellen. Ihr erfahrt auch wie ihr ihn selbst herstellen könnt! Das Rezept gibt es hier!</h2>
-          <p class="center"><a href="recipe/index.html" class="btn-large waves-effect waves-light custom-button">Ich will lernen!</a></p>
+          <h2 class="mdi-content-send section-header" lng-tag="title-how-all-began">Wie alles began! Lerne wie es geht! <span class="text-highlight" lng-tag="with-recipe">Mit Rezept!</span></h1>
+          <p class="left-align light" lng-tag="more-about-cake">Hier erfährst du mehr darüber wie ich auf die Idee gekommen bin diesen leckeren exotischen Kuchen für Berlin zu backen und wie ich ihn herstellen. Ihr erfahrt auch wie ihr ihn selbst herstellen könnt! Das Rezept gibt es hier!</h2>
+          <p class="center"><a href="recipe/index.html" class="btn-large waves-effect waves-light custom-button" lng-tag="i-want-to-learn">Ich will das lernen!</a></p>
         </div>
       </div>
       <div class="col m6 s12 half-page-images" id="figures-background"></div>
@@ -145,10 +145,10 @@
       <div class="col m6 half-page-images desktop-only" id="boloderolo-background"></div>
       <div class="col m6 s12">
         <div class="container">
-          <h2 class="mdi-content-send section-header">Was ist Bolo de Rolo?</span></h1>
-          <p class="left-align light">Hier findet ihr Information zum Ursprung des Kuchens und was ihn so besonders macht. Ihr erfahrt auch wie er zum kulturellen Erbe Pernambucos in Nordostbrasilien wurde.</h2>
+          <h2 class="mdi-content-send section-header" lng-tag="what-is">Was ist Bolo de Rolo?</span></h1>
+          <p class="left-align light" lng-tag="info">Hier findet ihr Information zum Ursprung des Kuchens und was ihn so besonders macht. Ihr erfahrt auch wie er zum kulturellen Erbe Pernambucos in Nordostbrasilien wurde.</h2>
           <p class="center">
-            <a href="../background/index.html" class="btn-large waves-effect waves-light custom-button">Hintergrund</a>
+            <a href="../background/index.html" class="btn-large waves-effect waves-light custom-button" lng-tag="background-btn">Hintergrund</a>
           </p>
         </div>
       </div>
@@ -170,7 +170,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Bolo de Rolo</h5>
-          <p class="grey-text text-lighten-4">Du möchtest gern mehr über mich erfahren oder du hast eine Frage? Du erreichst mich über Bolo.de.Rolo.Berlin@gmail.com. Ich freue mich über deine Nachricht.</p>
+          <p class="grey-text text-lighten-4" lng-tag="more-info-footer">Du möchtest gern mehr über mich erfahren oder du hast eine Frage? Du erreichst mich über Bolo.de.Rolo.Berlin@gmail.com. Ich freue mich über deine Nachricht.</p>
         </div>
       </div>
     </div>
@@ -181,7 +181,7 @@
             <img class="brand-figure" id="chamaeleon-footer-brand" src="images/chamaeleon.png" alt="chamaleon-symbol-footer">
             <p>copyright @theresamannschatz.design 2023</p>
           </a>
-          <a class="grey-text text-lighten-4" href="../imprint/index.html">Impressum</a>
+          <a class="grey-text text-lighten-4" href="../imprint/index.html" lng-tag="imprint">Impressum</a>
           <!-- analytics tracker -->
           <!-- Begin Web-Stat code v 7.0 -->
           <div class="stats-wrapper">
