--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <div class="row">
       <div class="col s12 m6">
         <div class="container">
-          <h2 class="mdi-content-send section-header" lng-tag="title-how-all-began">Wie alles began! Lerne wie es geht! <span class="text-highlight" lng-tag="with-recipe">Mit Rezept!</span></h1>
+          <h2 class="mdi-content-send section-header" lng-tag="title-how-all-began">Wie alles began! Lerne wie es geht! <span class="text-highlight">Mit Rezept!</span></h1>
           <p class="left-align light" lng-tag="more-about-cake">Hier erfährst du mehr darüber wie ich auf die Idee gekommen bin diesen leckeren exotischen Kuchen für Berlin zu backen und wie ich ihn herstellen. Ihr erfahrt auch wie ihr ihn selbst herstellen könnt! Das Rezept gibt es hier!</h2>
           <p class="center"><a href="recipe/index.html" class="btn-large waves-effect waves-light custom-button" lng-tag="i-want-to-learn">Ich will das lernen!</a></p>
         </div>
